...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/maiAccCreButton"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_buttons"
        android:onClick="launchAccountCreation"
        android:text="@string/account_creation_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maiQuizButton" />

    <Button
        android:id="@+id/maiLoginButton"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_buttons"
        android:onClick="launchLogin"
        android:text="@string/login_button"
...
